--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gapi-script": "^1.2.0",
     "mongodb": "^4.12.0",
     "react-datepicker": "^4.8.0",
+    "react-geocode": "^0.2.3",
     "react-google-login": "^5.2.2",
     "react-microsoft-login": "^1.15.0",
     "react-router-dom": "^6.4.2"
