--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-navdropdown-active": "^0.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-microsoft-login": "^1.15.0",
     "react-router-dom": "^6.4.0",
     "react-script": "^2.0.5",
